--- a/nxtecs/course.html
+++ b/nxtecs/course.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Courses</title>
+    <title>Courses || Nxtecs</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -48,7 +48,7 @@
                                     <li><a href="#">Skills <i class="far fa-angle-down"></i></a>
                                         <ul class="sub-menu text-left">
                                             <li><a href="skills.html">Devops</a></li>
-                                            <li><a href="ae.html">AE</a></li>
+                                            <li><a href="ae.html">AEM</a></li>
                                             <li><a href="cybersecurity.html">Cyber Security</a></li>
                                             <li><a href="python.html">Python</a></li>
                                             <li><a href="dataanalyst.html">Data Analytics</a></li>
@@ -130,7 +130,7 @@
                 <li><a href="#">Skills <i class="far fa-angle-down"></i></a>
                     <ul class="sub-menu text-left">
                         <li><a href="devops.html">Devops</a></li>
-                        <li><a href="ae.html">AE</a></li>
+                        <li><a href="ae.html">AEM</a></li>
                         <li><a href="cybersecurity.html">Cyber Security</a></li>
                         <li><a href="python.html">Python</a></li>
                         <li><a href="dataanalyst.html">Data Analytics</a></li>
@@ -1092,13 +1092,7 @@
                                     <strong>Phone:</strong> +91 1234567890<br>
                                     <strong>Email:</strong> info@NXTECS.com<br>
                                 </p>
-                                <div class="social-links mt-3">
-                                    <a href="#" class="link"><i class="fab fa-twitter"></i></a>
-                                    <a href="#" class="link"><i class="fab fa-facebook"></i></a>
-                                    <a href="#" class="link"><i class="fab fa-instagram"></i></a>
-                                    <a href="#" class="link"><i class="fab fa-whatsapp"></i></a>
-                                    <a href="#" class="link"><i class="fab fa-linkedin"></i></a>
-                                </div>
+                                
                             </div>
                         </div>
 
@@ -1148,6 +1142,16 @@
                 </div>
             </div>
 
+            <div class="container1">
+                <div class="social-links mt-3">
+                    <a href="#" class="link"><i class="fab fa-twitter"></i></a>
+                    <a href="#" class="link"><i class="fab fa-facebook"></i></a>
+                    <a href="#" class="link"><i class="fab fa-instagram"></i></a>
+                    <a href="#" class="link"><i class="fab fa-whatsapp"></i></a>
+                    <a href="#" class="link"><i class="fab fa-linkedin"></i></a>
+                </div>
+                <br>
+            </div>
             <div class="container1">
                 &copy; Copyright <strong><span> NXTECS </span></strong>. All rights Reserved
             </div>
