--- a/nxtecs/index.html
+++ b/nxtecs/index.html
@@ -49,7 +49,7 @@
                                     <li><a href="#">Skills <i class="far fa-angle-right"></i></a>
                                         <ul class="sub-menu text-left">
                                             <li><a href="devops.html">Devops</a></li>
-                                            <li><a href="ae.html">AE</a></li>
+                                            <li><a href="ae.html">AEM</a></li>
                                             <li><a href="cybersecurity.html">Cyber Security</a></li>
                                             <li><a href="python.html">Python</a></li>
                                             <li><a href="dataanalyst.html">Data Analytics</a></li>
@@ -131,7 +131,7 @@
                 <li><a href="#">Skills <i class="far fa-angle-right"></i></a>
                     <ul class="sub-menu text-left">
                         <li><a href="devops.html">Devops</a></li>
-                        <li><a href="ae.html">AE</a></li>
+                        <li><a href="ae.html">AEM</a></li>
                         <li><a href="cybersecurity.html">Cyber Security</a></li>
                         <li><a href="python.html">Python</a></li>
                         <li><a href="dataanalyst.html">Data Analytics</a></li>
