--- a/nxtecs/python.html
+++ b/nxtecs/python.html
@@ -27,7 +27,7 @@
 
 
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.png">
-    <title>Python</title>
+    <title>Python || Nxtecs</title>
 </head>
 
 <body>
@@ -53,7 +53,7 @@
                                     <li><a href="#">Skills <i class="far fa-angle-down"></i></a>
                                         <ul class="sub-menu text-left">
                                             <li><a href="devops.html">Devops</a></li>
-                                            <li><a href="ae.html">AE</a></li>
+                                            <li><a href="ae.html">AEM</a></li>
                                             <li><a href="cybersecurity.html">Cyber Security</a></li>
                                             <li><a href="python.html">Python</a></li>
                                             <li><a href="dataanalyst.html">Data Analytics</a></li>
@@ -136,7 +136,7 @@
                 <li><a href="#">Skills <i class="far fa-angle-down"></i></a>
                     <ul class="sub-menu text-left">
                         <li><a href="devops.html">Devops</a></li>
-                        <li><a href="ae.html">AE</a></li>
+                        <li><a href="ae.html">AEM</a></li>
                         <li><a href="cybersecurity.html">Cyber Security</a></li>
                         <li><a href="python.html">Python</a></li>
                         <li><a href="dataanalyst.html">Data Analytics</a></li>
@@ -418,13 +418,7 @@
                                     <strong>Phone:</strong> +91 1234567890<br>
                                     <strong>Email:</strong> info@NXTECS.com<br>
                                 </p>
-                                <div class="social-links mt-3">
-                                    <a href="#" class="link"><i class="fab fa-twitter"></i></a>
-                                    <a href="#" class="link"><i class="fab fa-facebook"></i></a>
-                                    <a href="#" class="link"><i class="fab fa-instagram"></i></a>
-                                    <a href="#" class="link"><i class="fab fa-whatsapp"></i></a>
-                                    <a href="#" class="link"><i class="fab fa-linkedin"></i></a>
-                                </div>
+                                
                             </div>
                         </div>
 
@@ -474,6 +468,16 @@
                 </div>
             </div>
 
+            <div class="container1">
+                <div class="social-links mt-3">
+                    <a href="#" class="link"><i class="fab fa-twitter"></i></a>
+                    <a href="#" class="link"><i class="fab fa-facebook"></i></a>
+                    <a href="#" class="link"><i class="fab fa-instagram"></i></a>
+                    <a href="#" class="link"><i class="fab fa-whatsapp"></i></a>
+                    <a href="#" class="link"><i class="fab fa-linkedin"></i></a>
+                </div>
+                <br>
+            </div>
             <div class="container1">
                 &copy; Copyright <strong><span> NXTECS </span></strong>. All rights Reserved
             </div>
