--- a/nxtecs/about_us.html
+++ b/nxtecs/about_us.html
@@ -48,7 +48,7 @@
                                     <li><a href="#">Skills <i class="far fa-angle-down"></i></a>
                                         <ul class="sub-menu text-left">
                                             <li><a href="devops.html">Devops</a></li>
-                                            <li><a href="ae.html">AE</a></li>
+                                            <li><a href="ae.html">AEM</a></li>
                                             <li><a href="cybersecurity.html">Cyber Security</a></li>
                                             <li><a href="python.html">Python</a></li>
                                             <li><a href="dataanalyst.html">Data Analytics</a></li>
@@ -130,7 +130,7 @@
                 <li><a href="#">Skills <i class="far fa-angle-down"></i></a>
                     <ul class="sub-menu text-left">
                         <li><a href="devops.html">Devops</a></li>
-                        <li><a href="#">AE</a></li>
+                        <li><a href="#">AEM</a></li>
                         <li><a href="#">Cyber Security</a></li>
                         <li><a href="#">Python</a></li>
                         <li><a href="#">Data Analytics</a></li>
@@ -639,13 +639,7 @@
                                     <strong>Phone:</strong> +91 1234567890<br>
                                     <strong>Email:</strong> info@NXTECS.com<br>
                                 </p>
-                                <div class="social-links mt-3">
-                                    <a href="#" class="link"><i class="fab fa-twitter"></i></a>
-                                    <a href="#" class="link"><i class="fab fa-facebook"></i></a>
-                                    <a href="#" class="link"><i class="fab fa-instagram"></i></a>
-                                    <a href="#" class="link"><i class="fab fa-whatsapp"></i></a>
-                                    <a href="#" class="link"><i class="fab fa-linkedin"></i></a>
-                                </div>
+                                
                             </div>
                         </div>
 
@@ -695,6 +689,16 @@
                 </div>
             </div>
 
+            <div class="container1">
+                <div class="social-links mt-3">
+                    <a href="#" class="link"><i class="fab fa-twitter"></i></a>
+                    <a href="#" class="link"><i class="fab fa-facebook"></i></a>
+                    <a href="#" class="link"><i class="fab fa-instagram"></i></a>
+                    <a href="#" class="link"><i class="fab fa-whatsapp"></i></a>
+                    <a href="#" class="link"><i class="fab fa-linkedin"></i></a>
+                </div>
+                <br>
+            </div>
             <div class="container1">
                 &copy; Copyright <strong><span> NXTECS </span></strong>. All rights Reserved
             </div>
