--- a/nxtecs/events.html
+++ b/nxtecs/events.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Events</title>
+    <title>Events || Nxtecs</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="manifest" href="site.html">
@@ -46,7 +46,7 @@
                                     <li><a href="#">Skills <i class="far fa-angle-down"></i></a>
                                         <ul class="sub-menu text-left">
                                             <li><a href="skills.html">Devops</a></li>
-                                            <li><a href="#">AE</a></li>
+                                            <li><a href="#">AEM</a></li>
                                             <li><a href="#">Cyber Security</a></li>
                                             <li><a href="#">Python</a></li>
                                             <li><a href="#">Data Analytics</a></li>
@@ -128,7 +128,7 @@
                 <li><a href="#">Skills <i class="far fa-angle-down"></i></a>
                     <ul class="sub-menu text-left">
                         <li><a href="devops.html">Devops</a></li>
-                        <li><a href="#">AE</a></li>
+                        <li><a href="#">AEM</a></li>
                         <li><a href="#">Cyber Security</a></li>
                         <li><a href="#">Python</a></li>
                         <li><a href="#">Data Analytics</a></li>
@@ -375,13 +375,7 @@
                                     <strong>Phone:</strong> +91 1234567890<br>
                                     <strong>Email:</strong> info@NXTECS.com<br>
                                 </p>
-                                <div class="social-links mt-3">
-                                    <a href="#" class="link"><i class="fab fa-twitter"></i></a>
-                                    <a href="#" class="link"><i class="fab fa-facebook"></i></a>
-                                    <a href="#" class="link"><i class="fab fa-instagram"></i></a>
-                                    <a href="#" class="link"><i class="fab fa-whatsapp"></i></a>
-                                    <a href="#" class="link"><i class="fab fa-linkedin"></i></a>
-                                </div>
+                               
                             </div>
                         </div>
 
@@ -431,6 +425,16 @@
                 </div>
             </div>
 
+            <div class="container1">
+                <div class="social-links mt-3">
+                    <a href="#" class="link"><i class="fab fa-twitter"></i></a>
+                    <a href="#" class="link"><i class="fab fa-facebook"></i></a>
+                    <a href="#" class="link"><i class="fab fa-instagram"></i></a>
+                    <a href="#" class="link"><i class="fab fa-whatsapp"></i></a>
+                    <a href="#" class="link"><i class="fab fa-linkedin"></i></a>
+                </div>
+                <br>
+            </div>
             <div class="container1">
                 &copy; Copyright <strong><span> NXTECS </span></strong>. All rights Reserved
             </div>
