--- a/nxtecs/index.html
+++ b/nxtecs/index.html
@@ -882,12 +882,11 @@
                 </div>
 
                 <div class="container1">
-                    <div class="social-links mt-3">
-                        <a href="#" class="link"><i class="fab fa-twitter"></i></a>
-                        <a href="#" class="link"><i class="fab fa-facebook"></i></a>
-                        <a href="#" class="link"><i class="fab fa-instagram"></i></a>
-                        <a href="#" class="link"><i class="fab fa-whatsapp"></i></a>
-                        <a href="#" class="link"><i class="fab fa-linkedin"></i></a>
+                    <div class="footer-social-icon text-right pb-70">
+                        <a class="fot-fb active pb-70" href="#"><i class="fab fa-facebook-f"></i> Facebook</a>
+                        <a class="fot-twitter pb-70" href="#"><i class="fab fa-twitter"></i> Twitter</a>
+                        <a class="fot-google pb-70" href="#"><i class="fab fa-youtube"></i> Youtube</a>
+                        <a class="fot-insta pb-70" href="#"><i class="fab fa-instagram"></i> Instagram</a>
                     </div>
                     <br>
                 </div>
