--- a/nxtecs/devops.html
+++ b/nxtecs/devops.html
@@ -354,8 +354,7 @@
 
                                             <label for="phone"><b>Mobile number</b></label>
                                             <input type="tel" maxlength="10" max="9" min="1" size="1"
-                                                placeholder="Enter Mobile number" name="phone" pattern="[0-9]{10}"
-                                                required>
+                                                placeholder="Enter Mobile number" name="phone" pattern="[0-9]{10}"  required>
 
                                             <label for="email"><b>Email</b></label>
                                             <input type="email" placeholder="Enter your email" name="email" required>
