--- a/nxtecs/index.html
+++ b/nxtecs/index.html
@@ -882,11 +882,11 @@
                 </div>
 
                 <div class="container1">
-                    <div class="footer-social-icon text-right pb-70">
-                        <a class="fot-fb active pb-70" href="#"><i class="fab fa-facebook-f"></i> Facebook</a>
-                        <a class="fot-twitter pb-70" href="#"><i class="fab fa-twitter"></i> Twitter</a>
-                        <a class="fot-google pb-70" href="#"><i class="fab fa-youtube"></i> Youtube</a>
-                        <a class="fot-insta pb-70" href="#"><i class="fab fa-instagram"></i> Instagram</a>
+                    <div class="footer-social-icon text-right ">
+                        <a class="fot-fb active" href="#"><i class="fab fa-facebook"></i> Facebook</a>
+                        <a class="fot-twitter" href="#"><i class="fab fa-twitter"></i> Twitter</a>
+                        <a class="fot-google" href="#"><i class="fab fa-youtube"></i> Youtube</a>
+                        <a class="fot-insta" href="#"><i class="fab fa-instagram"></i> Instagram</a>
                     </div>
                     <br>
                 </div>
