--- a/nxtecs/python.html
+++ b/nxtecs/python.html
@@ -177,7 +177,7 @@
         <!--page-title-area end-->
         <section id="team" class="team">
             <div class="container">
-                <div class="section-title">
+                <div class="section-title1">
                     <hr class="hr"> &nbsp; &nbsp;&nbsp;&nbsp; <h2>About Python</h2> &nbsp; &nbsp;&nbsp;&nbsp;
                     <hr>
                     <p></p>
@@ -220,7 +220,7 @@
         <section id="team" class="team">
             <div class="container" data-aos="fade-down">
 
-                <div class="section-title">
+                <div class="section-title1">
                     <hr class="hr"> &nbsp; &nbsp;&nbsp;&nbsp; <h2>Our Trainers</h2> &nbsp; &nbsp;&nbsp;&nbsp;
                     <hr>
                     <p></p>
@@ -469,12 +469,11 @@
             </div>
 
             <div class="container1">
-                <div class="social-links mt-3">
-                    <a href="#" class="link"><i class="fab fa-twitter"></i></a>
-                    <a href="#" class="link"><i class="fab fa-facebook"></i></a>
-                    <a href="#" class="link"><i class="fab fa-instagram"></i></a>
-                    <a href="#" class="link"><i class="fab fa-whatsapp"></i></a>
-                    <a href="#" class="link"><i class="fab fa-linkedin"></i></a>
+                <div class="footer-social-icon text-right ">
+                    <a class="fot-fb active" href="#"><i class="fab fa-facebook"></i> Facebook</a>
+                    <a class="fot-twitter" href="#"><i class="fab fa-twitter"></i> Twitter</a>
+                    <a class="fot-google" href="#"><i class="fab fa-youtube"></i> Youtube</a>
+                    <a class="fot-insta" href="#"><i class="fab fa-instagram"></i> Instagram</a>
                 </div>
                 <br>
             </div>
