--- a/nxtecs/course.html
+++ b/nxtecs/course.html
@@ -1076,7 +1076,7 @@
         </div>
         <!-- brand-area-end -->
         <footer id="footer">
-            <div class="footer-top">
+            <div class="footer-top"> <br>
                 <div class="container">
                     <div class="row">
 
@@ -1133,7 +1133,8 @@
                             <h4>Mail us Here</h4>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, dolores!</p>
                             <form action="" method="post">
-                                <input type="email" name="email"><input class="link1" type="submit" value="Submit">
+                                <input type="email" name="email"> <br>
+                                <input class="link1" type="submit" value="Submit">
                             </form>
 
                         </div>
