--- a/nxtecs/index.html
+++ b/nxtecs/index.html
@@ -44,9 +44,9 @@
 
                                     <li class="active"><a href="index.html">Home</a></li>
                                     <li><a href="about_us.html">About Us</a></li>
-                                    <!--<li><a href="course.html">AEM</a></li>-->
+                                    <li><a href="course.html">AEM</a></li>
 
-                                    <li><a href="#">Skills <i class="far fa-angle-right"></i></a>
+                                    <li><a href="#">Skills <i class="far fa-angle-down"></i></a>
                                         <ul class="sub-menu text-left">
                                             <li><a href="devops.html">Devops</a></li>
                                             <li><a href="ae.html">AEM</a></li>
@@ -69,7 +69,7 @@
                     </div>
                     <div class="col-xl-3 col-lg-5 col-md-6 col-4">
                         <div class="header-right d-sm-flex align-items-center justify-content-end">
-                            <div class="footer-social-icon text-right">
+                            <div class="footer-social-icon d-none d-md-inline-block">
                                 <a class="fot-fb active" href="#"><i class="fab fa-facebook"></i></a>
                                 <a class="fot-twitter" href="#"><i class="fab fa-twitter"></i></a>
                                 <a class="fot-google" href="#"><i class="fab fa-youtube"></i></a>
