--- a/nxtecs/ae.html
+++ b/nxtecs/ae.html
@@ -131,7 +131,7 @@
 
                 <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="about_us.html">About Us</a></li>
-                <!--<li><a href="course.html">AEM</a></li>-->
+                <li><a href="course.html">AEM</a></li>
 
                 <li><a href="#">Skills <i class="far fa-angle-down"></i></a>
                     <ul class="sub-menu text-left">
@@ -166,7 +166,7 @@
                             <div class="breadcrumb">
                                 <ul class="breadcrumb-list">
                                     <li><a href="index.html">Home <i class="far fa-chevron-right"></i></a></li>
-                                    <li><a class="active" href="#">AE</a></li>
+                                    <li><a class="active" href="#">AEM</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -178,7 +178,7 @@
         <section id="team" class="team">
             <div class="container">
                 <div class="section-title1">
-                    <hr class="hr"> &nbsp; &nbsp;&nbsp;&nbsp; <h2>About AE</h2> &nbsp; &nbsp;&nbsp;&nbsp;
+                    <hr class="hr"> &nbsp; &nbsp;&nbsp;&nbsp; <h2>About AEM</h2> &nbsp; &nbsp;&nbsp;&nbsp;
                     <hr>
                     <p></p>
                 </div>
