--- a/nxtecs/contact_us.html
+++ b/nxtecs/contact_us.html
@@ -44,7 +44,7 @@
 
                                     <li class="active"><a href="index.html">Home</a></li>
                                     <li><a href="about_us.html">About Us</a></li>
-                                    <!--<li><a href="course.html">AEM</a></li>-->
+                                    <li><a href="course.html">AEM</a></li>
 
                                     <li><a href="#">Skills <i class="far fa-angle-down"></i></a>
                                         <ul class="sub-menu text-left">
