--- a/nxtecs/ae.html
+++ b/nxtecs/ae.html
@@ -162,7 +162,7 @@
                 <div class="row">
                     <div class="col-xl-6 offset-xl-3">
                         <div class="page-title text-center">
-                            <h1>AE</h1>
+                            <h1>AEM</h1>
                             <div class="breadcrumb">
                                 <ul class="breadcrumb-list">
                                     <li><a href="index.html">Home <i class="far fa-chevron-right"></i></a></li>
