--- a/nxtecs/events.html
+++ b/nxtecs/events.html
@@ -45,7 +45,7 @@
 
                                     <li><a href="#">Skills <i class="far fa-angle-down"></i></a>
                                         <ul class="sub-menu text-left">
-                                            <li><a href="skills.html">Devops</a></li>
+                                            <li><a href="skills.html">DevOps</a></li>
                                             <li><a href="#">AEM</a></li>
                                             <li><a href="#">Cyber Security</a></li>
                                             <li><a href="#">Python</a></li>
