--- a/nxtecs/ae.html
+++ b/nxtecs/ae.html
@@ -135,7 +135,7 @@
 
                 <li><a href="#">Skills <i class="far fa-angle-down"></i></a>
                     <ul class="sub-menu text-left">
-                        <li><a href="devops.html">Devops</a></li>
+                        <li><a href="devops.html">DevOps</a></li>
                         <li><a href="ae.html">AEM</a></li>
                         <li><a href="cybersecurity.html">Cyber Security</a></li>
                         <li><a href="python.html">Python</a></li>
