--- a/nxtecs/course.html
+++ b/nxtecs/course.html
@@ -47,7 +47,7 @@
 
                                     <li><a href="#">Skills <i class="far fa-angle-down"></i></a>
                                         <ul class="sub-menu text-left">
-                                            <li><a href="skills.html">Devops</a></li>
+                                            <li><a href="skills.html">DevOps</a></li>
                                             <li><a href="ae.html">AEM</a></li>
                                             <li><a href="cybersecurity.html">Cyber Security</a></li>
                                             <li><a href="python.html">Python</a></li>
