--- a/nxtecs/index.html
+++ b/nxtecs/index.html
@@ -272,7 +272,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6">
                         <div class="course-cat-wrapper mb-30">
                             <div class="course-cat-img">
-                                <a href="courses-details.html"><img src="assets/img/course/01.jpg" alt=""></a>
+                                <a href="job.html"><img src="assets/img/course/01.jpg" alt=""></a>
                             </div>
                             <div class="course-cat-text">
                                 <h4 class="text_align"><a href="">AEM Architects</a></h4>
@@ -283,7 +283,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6">
                         <div class="course-cat-wrapper mb-30">
                             <div class="course-cat-img">
-                                <a href="courses-details.html"><img src="assets/img/course/02.jpg" alt=""></a>
+                                <a href="job.html"><img src="assets/img/course/02.jpg" alt=""></a>
                             </div>
                             <div class="course-cat-text">
                                 <h4 class="text_align"><a href="">AEM Developer </a></h4>
@@ -294,7 +294,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6">
                         <div class="course-cat-wrapper mb-30">
                             <div class="course-cat-img">
-                                <a href="courses-details.html"><img src="assets/img/course/04.jpg" alt=""></a>
+                                <a href="job.html"><img src="assets/img/course/04.jpg" alt=""></a>
                             </div>
                             <div class="course-cat-text">
                                 <h4 class="text_align"><a href="">AEM manager</a></h4>
@@ -305,7 +305,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6">
                         <div class="course-cat-wrapper mb-30">
                             <div class="course-cat-img">
-                                <a href="courses-details.html"><img src="assets/img/course/03.jpg" alt=""></a>
+                                <a href="job.html"><img src="assets/img/course/03.jpg" alt=""></a>
                             </div>
                             <div class="course-cat-text">
                                 <h4 class="text_align"><a href="">AEM Full stack developers</a></h4>
@@ -316,7 +316,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6">
                         <div class="course-cat-wrapper mb-30">
                             <div class="course-cat-img">
-                                <a href="courses-details.html"><img src="assets/img/course/05.jpg" alt=""></a>
+                                <a href="job.html"><img src="assets/img/course/05.jpg" alt=""></a>
                             </div>
                             <div class="course-cat-text">
                                 <h4 class="text_align"><a href="">AEM QA senior consultant</a></h4>
