--- a/nxtecs/job.html
+++ b/nxtecs/job.html
@@ -207,7 +207,7 @@
                         title="Close Modal" class="w3-button w3-display-topright">&times;</span>
                     <form class="modal-content" action="/action_page.php">
                         <div class="container">
-                             <h3>Please fill in this following form</h3>
+                             <h3>Fill this following form</h3>
                             <!--<p>Please fill in this following form.<p>-->
                                 <hr>
                                 <label for="name"><b>Name</b></label>
