--- a/nxtecs/curriculum.html
+++ b/nxtecs/curriculum.html
@@ -27,7 +27,7 @@
 
 
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.png">
-    <title>AEM Architect || Nxtecs</title>
+    <title>Curriculum || Nxtecs</title>
 </head>
 
 <body>
@@ -159,104 +159,111 @@
     <main>
 
         <!--page-title-area end-->
-        <section id="team" class="team" style="background-color: #EAF4F7;">
-            <div class="container" style="background-color: #EAF4F7; padding-top: 80PX;">
-                <div class="section-title1">
-                    <hr class="hr"> &nbsp; &nbsp;&nbsp;&nbsp; <h2 style="background-color: #EAF4F7;">We are Hiring</h2>
-                    &nbsp; &nbsp;&nbsp;&nbsp;
-                    <hr>
-                </div>
-                <h2 style="background-color: #EAF4F7;">For an AEM Architect</h2>
-
-
-                <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Our company is growing rapidly and is looking for an AEM
-                    architect. Thank you in advance for taking a look at the list of responsibilities and
-                    qualifications. We look forward to reviewing your resume.
-
-                <h4>Responsibilities for AEM architect</h4> <br>
-                • Establishes auditing procedures to ensure continued integrity <br>
-                • Assist in post-implementation continuous improvement efforts in enhancing performance and providing
-                increased functionality <br>
-                • Serves as team leader in the integration of solutions, constructing applications, developing new
-                business opportunities and building relationships with clients <br>
-                • Research and coordinates conversions and upgrades to in-house and vendor systems <br>
-                • Works with IT operations, incident and problem management teams in resolving issues and maintaining
-                application availability and stability in production <br>
-                • Develop workflows, build new templates and application customizations for the WCM application <br>
-                • Define and document best practices to manage performance and scalability of the content management and
-                content delivery solution <br>
-                • Follow Secure DLC process to develop in accordance with security requirements and best practices
-                coding procedures <br>
-                • Contributes to project plans for large projects and supports their implementation <br>
-                • Develop proposals for implementation and design of Web Content Management solutions, based on Adobe
-                AEM <br> <br>
-
-                <h4>Qualifications for AEM architect</h4> <br>
-                • Experience in HTML5, DHTML, CSS3 and Javascript (ExtJS, jQuery ) <br>
-                • Domain expertise in managing and supporting enterprise class systems <br>
-                • Minimum 1 year Agile delivery experience <br>
-                • 3+ years of experience developing ecommerce or web content management applications <br>
-                • A minimum of a Master’s degree or equivalent in IT, Engineering or related field is required <br>
-                • Professional experience in a global organization is also required</p>
-                <br>
-                <button onclick="document.getElementById('id02').style.display='block'" type="button"
-                    class="block">Apply Here</button>
-
-                <div id="id02" class="modal">
-                    <span onclick="document.getElementById('id02').style.display='none'" class="close"
-                        title="Close Modal" class="w3-button w3-display-topright">&times;</span>
-                    <form class="modal-content" action="/action_page.php">
-                        <div class="container">
-                             <h3>Fill this following form</h3>
-                            <!--<p>Please fill in this following form.<p>-->
-                                <hr>
-                                <label for="name"><b>Name</b></label>
-                                <input type="text" placeholder="Enter Name" name="name" required>
-
-                                <label for="phone"><b>Mobile number</b></label>
-                                <input type="tel" maxlength="10" max="9" min="1" size="1"
-                                    placeholder="Enter Mobile number" name="phone" pattern="[0-9]{10}" required>
-
-                                <label for="email"><b>Email</b></label>
-                                <input type="email" placeholder="Enter your email" name="email" required>
-
-                                <label for="text"><b>Mention your Skills</b></label>
-                                <textarea type="text" name="text" rows="3" style="width: 100%;" required></textarea>
-
-
-
-                                <label for="address"><b>Experience</b></label> <br>
-                                <select type="address" name="address" required style="width: 300px !important;">
-                                    <option selected value="1">1 Year</option>
-                                    <option value="2">2 Years</option>
-                                    <option value="2">3 Years</option>
-                                    <option value="2">4 Years</option>
-                                    <option value="2">5 Years</option>
-                                </select> <br><br>
-
-                                <label for="address"><b>Upload your Resume here</b></label> <br>
-                            <form action="/action_page.php">
-                                <input type="file" id="myFile" name="filename" required>
-                            </form>
-                            <br>
-                            <!-- <label>
-                            <input type="checkbox" checked="checked" name="remember"
-                                style="margin-bottom:15px"> Remember me
-                            </label>
-        
-                           <p>By creating an account you agree to our <a href="#"
-                                style="color:dodgerblue">Terms & Privacy</a>.</p>-->
-                            <br>
-                            <div class="clearfix">
-
-                                <button type="submit" class="Confirmbtn">Confirm</button>
+        <section class="about-eduplus-area pt-130 pb-130">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-8 col-lg-8 col-md-12">
+                        <div class="about-wrapper mb-30">
+                            <div class="section-title text-left mb-60">
+                                <span><i class="fal fa-ellipsis-h"></i> Introduction About AEM</span>
+                                <h2>Course Overview</h2>
+                                <p class="left-line pos-rel pl-30">AEM Training from NXTECS teaches you the
+                                    essential skills needed to develop and debug Adobe Experience Management through
+                                    best practices. In this AEM course, you’ll learn the advanced methods used for
+                                    developing websites being an AEM developer. The training starts with AEM basics and
+                                    dives into central concepts like architecture, installation, features, using AEM
+                                    with Maven and VLT, etc. By the time you’re done with this certification training,
+                                    you’ll have the required skill set to tackle advanced development challenges in AEM.
+                                </p>
+                                <div class="row">
+                                    <span></span>
+                                </div>
                             </div>
+                            <div class="about-inner-text">
+                                <ul class="inner-content-list">
+                                    <li>
+                                        <div class="inner-content d-flex">
+                                            <div class="inner-content-icon">
+                                                <i class="fal fa-book"></i>
+                                            </div>
+                                            <div class="inner-content-text">
+                                                <h6>Placement Assistance</h6>                                                
+                                            </div>
+                                            <div class="inner-content-icon">
+                                                <i class="fal fa-book"></i>
+                                            </div>
+                                            <div class="inner-content-text">
+                                                <h6>18 Hours of Session</h6>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="inner-content d-flex mb-25">
+                                            <div class="inner-content-icon">
+                                                <i class="fal fa-trophy"></i>
+                                            </div>
+                                            <div class="inner-content-text">
+                                                <h6>Professional & Expert</h6>
+                                                <p> It is not always about how much knowledge we have, it is about how
+                                                    we use it. So let's join together to make this just more than
+                                                    theoretical experience. Let’s spread the word of conception
+                                                    knowledge!</p>
+                                            </div>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+
                         </div>
-                    </form>
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-md-12">
+                        <div class="about-wrapper mb-30">
+                            <div class="section-title text-left mb-60">
+                                <span><i class="fal fa-ellipsis-h"></i> Introduced About Nxtecs</span>
+                                <h2>Welcome To Nxtecs</h2>
+                                <p class="left-line pos-rel pl-30">AEM not only simplifies the management of a website’s
+                                    content but also simplifies your career path.</p>
+                            </div>
+                            <div class="about-inner-text">
+                                <ul class="inner-content-list">
+                                    <li>
+                                        <div class="inner-content d-flex">
+                                            <div class="inner-content-icon">
+                                                <i class="fal fa-book"></i>
+                                            </div>
+                                            <div class="inner-content-text">
+                                                <h6>Placement Assistance</h6>
+                                                <p> In addition to backing academic knowledge with practical experience,
+                                                    we conduct rigorous training & placement sessions including job
+                                                    fairs, to keep them interview & job ready!</p>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="inner-content d-flex mb-25">
+                                            <div class="inner-content-icon">
+                                                <i class="fal fa-trophy"></i>
+                                            </div>
+                                            <div class="inner-content-text">
+                                                <h6>Professional & Expert</h6>
+                                                <p> It is not always about how much knowledge we have, it is about how
+                                                    we use it. So let's join together to make this just more than
+                                                    theoretical experience. Let’s spread the word of conception
+                                                    knowledge!</p>
+                                            </div>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+
+                        </div>
+                    </div>
                 </div>
             </div>
-
         </section>
+        <!--about-eduplus-area end-->
+
+
         <footer id="footer">
             <div class="footer-top">
                 <div class="container">
