--- a/nxtecs/index.html
+++ b/nxtecs/index.html
@@ -360,7 +360,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item">
                         <div class="gallery-wrapper mb-30">
                             <div class="gallery-img pos-rel">
-                                <a href="#"><img src="assets/img/gallery/img_1.jpg" alt=""></a>
+                                <a href="curriculum.html"><img src="assets/img/gallery/img_1.jpg" alt=""></a>
                                 <div class="gallery-text">
                                     <h3><a href="">HTML</a></h3>
 
@@ -375,7 +375,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item">
                         <div class="gallery-wrapper mb-30">
                             <div class="gallery-img pos-rel">
-                                <a href="#"><img src="assets/img/gallery/img_2.jpg" alt=""></a>
+                                <a href="curriculum.html"><img src="assets/img/gallery/img_2.jpg" alt=""></a>
                                 <div class="gallery-text">
                                     <h3><a href="">Core JAVA</a></h3>
 
@@ -390,7 +390,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item">
                         <div class="gallery-wrapper mb-30">
                             <div class="gallery-img pos-rel">
-                                <a href="#"><img src="assets/img/gallery/img_3.jpg" alt=""></a>
+                                <a href="curriculum.html"><img src="assets/img/gallery/img_3.jpg" alt=""></a>
                                 <div class="gallery-text">
                                     <h3><a href="">AEM Sling & dispatcher</a></h3>
 
@@ -405,7 +405,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item">
                         <div class="gallery-wrapper mb-30">
                             <div class="gallery-img pos-rel">
-                                <a href="#"><img src="assets/img/gallery/img_4.jpg" alt=""></a>
+                                <a href="curriculum.html"><img src="assets/img/gallery/img_4.jpg" alt=""></a>
                                 <div class="gallery-text">
                                     <h3><a href="">Configuration</a></h3>
 
@@ -420,7 +420,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item">
                         <div class="gallery-wrapper mb-30">
                             <div class="gallery-img pos-rel">
-                                <a href="#"><img src="assets/img/gallery/img_5.jpg" alt=""></a>
+                                <a href="curriculum.html"><img src="assets/img/gallery/img_5.jpg" alt=""></a>
                                 <div class="gallery-text">
                                     <h3><a href="">AEM templates</a></h3>
 
@@ -435,7 +435,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item">
                         <div class="gallery-wrapper mb-30">
                             <div class="gallery-img pos-rel">
-                                <a href="#"><img src="assets/img/gallery/img_6.jpg" alt=""></a>
+                                <a href="curriculum.html"><img src="assets/img/gallery/img_6.jpg" alt=""></a>
                                 <div class="gallery-text">
                                     <h3><a href="">AEM components </a></h3>
 
@@ -450,7 +450,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item">
                         <div class="gallery-wrapper mb-30">
                             <div class="gallery-img pos-rel">
-                                <a href="#"><img src="assets/img/gallery/img_7.jpg" alt=""></a>
+                                <a href="curriculum.html"><img src="assets/img/gallery/img_7.jpg" alt=""></a>
                                 <div class="gallery-text">
                                     <h3><a href="">AEM workflows</a></h3>
 
@@ -465,7 +465,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item">
                         <div class="gallery-wrapper mb-30">
                             <div class="gallery-img pos-rel">
-                                <a href="#"><img src="assets/img/gallery/img_8.jpg" alt=""></a>
+                                <a href="curriculum.html"><img src="assets/img/gallery/img_8.jpg" alt=""></a>
                                 <div class="gallery-text">
                                     <h3><a href="">AEM UI </a></h3>
 
@@ -480,7 +480,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 grid-item">
                         <div class="gallery-wrapper mb-30">
                             <div class="gallery-img pos-rel">
-                                <a href="#"><img src="assets/img/gallery/img_9.jpg" alt=""></a>
+                                <a href="curriculum.html"><img src="assets/img/gallery/img_9.jpg" alt=""></a>
                                 <div class="gallery-text">
                                     <h3><a href="">Capstone project</a></h3>
 
