--- a/nxtecs/index.html
+++ b/nxtecs/index.html
@@ -607,7 +607,7 @@
                         <div class="events-wrapper mb-30">
                             <div class="events-img pos-rel">
                                 <div class="fix">
-                                    <a href="#"><img src="assets/img/events/01.jpg" alt=""></a>
+                                    <a href="events.html"><img src="assets/img/events/01.jpg" alt=""></a>
                                 </div>
 
                             </div>
