--- a/nxtecs/events.html
+++ b/nxtecs/events.html
@@ -45,11 +45,11 @@
 
                                     <li><a href="#">Skills <i class="far fa-angle-down"></i></a>
                                         <ul class="sub-menu text-left">
-                                            <li><a href="skills.html">DevOps</a></li>
-                                            <li><a href="#">AEM</a></li>
-                                            <li><a href="#">Cyber Security</a></li>
-                                            <li><a href="#">Python</a></li>
-                                            <li><a href="#">Data Analytics</a></li>
+                                            <li><a href="devops.html">DevOps</a></li>
+                                            <li><a href="ae.html">AEM</a></li>
+                                            <li><a href="cybersecurity.html">Cyber Security</a></li>
+                                            <li><a href="python.html">Python</a></li>
+                                            <li><a href="dataanalyst.html">Data Analytics</a></li>
                                         </ul>
                                     </li>
                                     <!-- <li><a href="#">Events <i class="far fa-angle-down"></i></a>
