--- a/nxtecs/curriculum.html
+++ b/nxtecs/curriculum.html
@@ -73,12 +73,12 @@
                     </div>
                     <div class="col-xl-3 col-lg-5 col-md-6 col-4">
                         <div class="header-right d-sm-flex align-items-center justify-content-end">
-                            <div class="header-icon d-none d-md-inline-block">
-                                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                                <a href="#"><i class="fab fa-youtube"></i></a>
-                                <a href="#"><i class="fab fa-instagram"></i></a>
-                                <a href="#"><i class="fab fa-whatsapp"></i></a>
-                            </div>
+                            <div class="footer-social-icon d-none d-md-inline-block">
+                                <a class="fot-fb active" href="#"><i class="fab fa-facebook"></i></a>
+                                <a class="fot-twitter" href="#"><i class="fab fa-twitter"></i></a>
+                                <a class="fot-google" href="#"><i class="fab fa-youtube"></i></a>
+                                <a class="fot-insta" href="#"><i class="fab fa-instagram"></i></a>
+                            </div> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                             <!--<div class="header-sing d-none d-md-inline-block">
                                     <a href="contact.html"> <i class="far fa-user-circle"></i>sing in</a>
                                 </div>-->
