--- a/nxtecs/curriculum.html
+++ b/nxtecs/curriculum.html
@@ -48,7 +48,7 @@
 
                                     <li class="active"><a href="index.html">Home</a></li>
                                     <li><a href="about_us.html">About Us</a></li>
-                                    <li><a href="course.html">AEM</a></li>
+                                    <li><a href="course.html">Courses</a></li>
 
                                     <li><a href="#">Skills <i class="far fa-angle-down"></i></a>
                                         <ul class="sub-menu text-left">
@@ -408,14 +408,14 @@
                             <br>
                             <h4>Popular Jobs</h4>
                             <ul>
-                                <li><i class="far fa-angle-right"></i> <a href="#" class="link">AEM Architects</a>
+                                <li><i class="far fa-angle-right"></i> <a href="job.html" class="link">AEM Architects</a>
                                 </li>
-                                <li><i class="far fa-angle-right"></i> <a href="#" class="link">AEM Developer</a>
+                                <li><i class="far fa-angle-right"></i> <a href="job.html" class="link">AEM Developer</a>
                                 </li>
-                                <li><i class="far fa-angle-right"></i> <a href="#" class="link">AEM Manager</a></li>
-                                <li><i class="far fa-angle-right"></i> <a href="#" class="link">AEM Full stack
+                                <li><i class="far fa-angle-right"></i> <a href="job.html" class="link">AEM Manager</a></li>
+                                <li><i class="far fa-angle-right"></i> <a href="job.html" class="link">AEM Full stack
                                         Developers </a></li>
-                                <li><i class="far fa-angle-right"></i> <a href="#" class="link">AEM QA senior
+                                <li><i class="far fa-angle-right"></i> <a href="job.html" class="link">AEM QA senior
                                         consultant</a></li>
                             </ul>
                         </div>
@@ -425,7 +425,8 @@
                             <h4>Mail us Here</h4>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, dolores!</p>
                             <form action="" method="post">
-                                <input type="email" name="email"><input class="link1" type="submit" value="Submit">
+                                <input type="email" name="email"> <br> 
+                                <input class="link1" type="submit" value="Submit">
                             </form>
 
                         </div>
