--- a/nxtecs/course.html
+++ b/nxtecs/course.html
@@ -43,7 +43,7 @@
 
                                     <li class="active"><a href="index.html">Home</a></li>
                                     <li><a href="about_us.html">About Us</a></li>
-                                    <li><a href="course.html">AEM</a></li>
+                                    <li><a href="course.html">Courses</a></li>
 
                                     <li><a href="#">Skills <i class="far fa-angle-down"></i></a>
                                         <ul class="sub-menu text-left">
