--- a/nxtecs/index.html
+++ b/nxtecs/index.html
@@ -46,7 +46,7 @@
                                     <li><a href="about_us.html">About Us</a></li>
                                     <li><a href="course.html">Courses</a></li>
 
-                                    <li><a href="#">Skills <i class="far fa-angle-down"></i></a>
+                                    <li><a href="#">Skills<i class="far fa-angle-down"></i></a>
                                         <ul class="sub-menu text-left">
                                             <li><a href="devops.html">DevOps</a></li>
                                             <li><a href="ae.html">AEM</a></li>
@@ -177,7 +177,8 @@
                                     </div>
                                     <div class="row support-area align-items-center">
                                         <div class="col-xl-6">
-                                            <p>The best way to get started is to stop thinking and get started.</p>
+                                            <p>The best way to get started is to stop thinking and get started.</p> <br>
+                                            <input class="link1" type="submit" value="Know us More">
                                         </div>
                                         <div class="col-xl-6">
                                             <div class="support d-flex align-items-center">
