--- a/nxtecs/index.html
+++ b/nxtecs/index.html
@@ -125,10 +125,10 @@
         <nav class="side-mobile-menu">
             <ul id="mobile-menu-active">
                 <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="about_us.html">About Us</a></li>
+                <li class="active"><a href="about_us.html">About Us</a></li>
                 <!--<li><a href="course.html">AEM</a></li>-->
 
-                <li><a href="#">Skills <i class="far fa-angle-right"></i></a>
+                <li class="active"><a href="#">Skills <i class="far fa-angle-right"></i></a>
                     <ul class="sub-menu text-left">
                         <li><a href="devops.html">Devops</a></li>
                         <li><a href="ae.html">AEM</a></li>
